force-app/main/default/objects/Movement__c/Movement__c.object-meta.xml
<CustomObject>
    <description>Tracks the movement of animals. Junction between Animal and Location</description>
    <label>Movement</label>
    <nameField>
        <displayFormat>MOVE{00000}</displayFormat>
        <label>Movement Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>