force-app/main/default/objects/Movement__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Animal this movement record is concerning</description>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Movements</relationshipLabel>
    <relationshipName>Movements</relationshipName>
    <type>Lookup</type>
</CustomField>