force-app/main/default/objects/Movement__c/fields/Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name__c</fullName>
    <description>Display the name of the animal</description>
    <formula>Animal__r.Animal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Name</label>
    <type>Text</type>
</CustomField>