force-app/main/default/objects/Movement__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this is the current record</description>
    <label>Current</label>
    <type>Checkbox</type>
</CustomField>