force-app/main/default/objects/Movement__c/fields/Display_on_Map__c.field-meta.xml
<CustomField>
    <fullName>Display_on_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the release location for this animal will be displayed on the Release Location map</inlineHelpText>
    <label>Display on Map</label>
    <type>Checkbox</type>
</CustomField>