force-app/main/default/objects/Movement__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The location the movement record is related to</description>
    <label>Location</label>
    <referenceTo>Locations__c</referenceTo>
    <relationshipLabel>Movements</relationshipLabel>
    <relationshipName>Movements</relationshipName>
    <type>Lookup</type>
</CustomField>