force-app/main/default/objects/Movement__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <formula>IF( Location__r.RecordType.DeveloperName = &quot;Unit&quot;,  Location__r.Block_Unit__c,  Location__r.Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>