force-app/main/default/objects/Movement__c/fields/Movement_Status__c.field-meta.xml
<CustomField>
    <fullName>Movement_Status__c</fullName>
    <description>Displays the status of the animal movement</description>
    <label>Movement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>