force-app/main/default/objects/Movement__c/fields/Release_Location__c.field-meta.xml
<CustomField>
    <fullName>Release_Location__c</fullName>
    <inlineHelpText>The geolocation of where the animal was released</inlineHelpText>
    <label>Release Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>