force-app/main/default/objects/Movement__c/fields/Sitename__c.field-meta.xml
<CustomField>
    <fullName>Sitename__c</fullName>
    <description>Used Internally to capture the Locations Sitename</description>
    <formula>Location__r.Sitename__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sitename</label>
    <type>Text</type>
</CustomField>