force-app/main/default/objects/Movement__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The Date this change in location started on</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>