force-app/main/default/objects/Movement__c/fields/Total_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Days__c</fullName>
    <formula>IF(ISBLANK(End_Date__c),  
TODAY() -  Start_Date__c, 
IF(OR(End_Date__c = Start_Date__c, Start_Date__c = TODAY()), 1, 
End_Date__c -  Start_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>