force-app/main/default/objects/Movement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Displays the type of movement</description>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>